# Cloud-ML-trade

./: README.md
docker-compose/: Makefile
services/candles/: run.py  settings.env
services/to-feature-store/: Makefile  pyproject.toml
services/trades/: Makefile  README.md  config.py  config.yaml  factory.py  pyproject.toml  run.py  streaming.py
services/trades/kraken_api/: trade.py  websocket.py
sessions/: session_1.md  session_2.md  session_3.md  session_4.md  session_5.md
