[project]
name = "trades"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "quixstreams==3.3.0",
    "websocket-client>=1.8.0",
    "requests>=2.32.3",
    "pandas>=2.1.2",
    "uvicorn>=0.30.0",
    "fastapi>=0.100.0",
    #"sqlalchemy>=2.1.2",
    #"psycopg2-binary>=2.9.61",
    #"psycopg2>=2.9.61",
    #"sqlmodel>=0.10.0",
    #"pydantic-settings>=2.6.1",
    #"pydantic>=2.9.2",
]